--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "admin-lte": "^2.3.11",
     "bootstrap": "^3.3.7",
+    "chart.js": "^1.1.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.5.4",
+    "react-highcharts": "^12.0.0",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1"
   },
