--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-localstorage": "^0.4.1",
-    "redux-thunk": "^2.2.0"
-    "react-router-dom": "^4.1.1",
+    "redux-thunk": "^2.2.0",
     "reactstrap": "^4.6.1"
   },
   "devDependencies": {
