--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
     "react-bootstrap": "^0.31.0",
-    "react-chartjs": "^0.8.0",
     "react-burger-menu": "^2.0.2",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
     "react-highcharts": "^12.0.0",
+    "react-redux": "^5.0.4",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
+    "react-switch-button": "^2.2.2",
+    "reactstrap": "^4.6.1",
     "redux": "^3.6.0",
     "redux-localstorage": "^0.4.1",
-    "redux-thunk": "^2.2.0",
-    "reactstrap": "^4.6.1"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
