--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-burger-menu": "^2.0.2",
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.5.4",
+    "react-file-input": "^0.2.5",
     "react-highcharts": "^12.0.0",
     "react-redux": "^5.0.4",
     "react-router-bootstrap": "^0.24.2",
