--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "reactstrap": "^4.6.1",
     "redux": "^3.6.0",
     "redux-localstorage": "^0.4.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
