--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^5.0.4",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
+    "react-share": "^1.14.0",
     "react-social": "^1.9.0",
     "react-toggle": "^4.0.1",
     "reactstrap": "^4.6.1",
